--- a/assets/admin/views/home.html
+++ b/assets/admin/views/home.html
@@ -14,7 +14,7 @@
   <div class="col-md-8">
     <h3 class="region-title">Geo Activity</h3>
 
-    <div class="well">
+    <div class="well" style="padding-bottom:3em;">
       <div class="row interior-section" style="padding-bottom:10px;">
         <div class="col-md-12">
           <select class="form-control" style="width:25%;display:inline;">
