--- a/assets/admin/views/home.html
+++ b/assets/admin/views/home.html
@@ -73,43 +73,7 @@
       </div>
       <div class="row" style="padding-top:10px;background-color:white;">
         <div class="col-md-12" style="background-color:white;margin-bottom:0px;padding-bottom:20px;">
-          <div class="row">
-            <div class="col-md-3">
-              <div style="background-color:#333333;width:188px;height:174px;vertical-align:middle;text-align:center;padding-top:25px;">
-                <img src="images/big_85.png">
-              </div>
-              <div style="background-color:#1D9B25;width:188px;height:43px;color:white;vertical-align:middle;text-align:center;line-height:43px;">
-                Highly Recommended
-              </div>
-            </div>
-            <div class="col-md-9" style="padding-left:2em;">
-              <table>
-                <tr>
-                  <td class="metric-orange">Size</td>
-                  <td><img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Weight</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Picture Quality</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png">&nbsp;<img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Audio</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-                <tr>
-                  <td class="metric-orange">Features</td>
-                  <td><img src="images/bar.png">&nbsp;<img src="images/bar.png"></td>
-                </tr>
-              </table>
-              <div style="text-align:right;margin-top:5.5em;">
-                <img src="images/grey_klout.png">
-              </div>
-            </div>
-          </div>
+          <img src="images/product_score.png" />
         </div>
       </div>
     </div>
@@ -212,12 +176,10 @@
       <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
-          <activity icon="peter" first="Peter" last="Parker" name="Peter Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
+          <activity icon="chris" first="Chris" last="Nesladek" name="Chris Nesladek" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
             <div class="post">
-              How many HDMI ports are on the back?
-            </div>
-            <div class="response">
-              There are four ports.
+              Posted a video<br/>
+              <img src="images/video_placeholder.png" />
             </div>
           </activity>
 
@@ -226,42 +188,16 @@
       <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
-          <activity icon="gwen" first="Gwen" last="Stacy" name="Gwen Stacy" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams">
+          <activity icon="sue" first="Sue" last="Smith" name="Sue Smity" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams">
             <div class="post">
-              <img src="images/room1.png">
-              <p>Is there a digital tuner in this unit?</p>
+              <p style="color:#8C62AC;font-weight:bold;"><img src="images/shield_purple.png"> ACHIEVEMENT UNLOCKED</p>
+              <p style="color:#8C62AC;">Sue has just answered 5 questions in a row!</p>
+              <hr/>
+              <p style="font-weight:bold;">Q: How many HDMI ports are on the back?</p>
+              <p style="margin-top:1em;"><strong>A:</strong> There are 4 HDMI ports</p>
             </div>
             <div class="response">
               No. You need to have Cable, Satellite or your own Tuner. I suggest looking at Best Buy...
-            </div>
-          </activity>
-
-        </div>
-      </div>
-      <div class="row interior-section" style="padding-top:10px;background-color:white;">
-        <div class="col-md-12">
-
-          <activity icon="harry" first="Harry" last="Osborn" name="Harry Osborn" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-            <div class="post">
-              <p>What do you recommend for a Sound bar?</p>
-            </div>
-            <div class="response">
-              I'm a big fan of the companion Sony HTCT370 as well as any Sonos unit.
-            </div>
-          </activity>
-
-        </div>
-      </div>
-      <div class="row interior-section" style="padding-top:10px;background-color:white;">
-        <div class="col-md-12">
-
-          <activity icon="may" first="Mary" last="Parker" name="Mary Parker" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
-            <div class="post">
-              <img src="images/room2.png">
-              <p>What is the best wall mount for the 55"?</p>
-            </div>
-            <div class="response">
-              Sanus Mounts are the best for the money. Amazon has the best prices.
             </div>
           </activity>
 
