fix(sony): update so the hovercard does not affect the height of the header

--- a/assets/lithium/styles-desktop.css
+++ b/assets/lithium/styles-desktop.css
@@ -130,6 +130,7 @@ body#ws-product .sny-product-header.sny-hdr-stuck {
   left: auto;
   bottom: auto;
   visibility: hidden;
+  height: 0px;
 }
 
 #klout-score-hover .inner-div {
