--- a/assets/lithium/styles-desktop.css
+++ b/assets/lithium/styles-desktop.css
@@ -68,6 +68,10 @@ body#ws-product .sny-product-header.sny-hdr-stuck {
 .flag2:hover {
   background-image: url(/lithium/mobile_Kscore_btn_press.png);
 }
+
+/* preload image*/
+body { background: url(/lithium/mobile_Kscore_btn_press.png) no-repeat -9999px -9999px; }
+
 .flag2 .score {
   font: 39px / 67px 'LatoBlack', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #fff;
