More changes for Chris

--- a/assets/admin/views/demand.html
+++ b/assets/admin/views/demand.html
@@ -51,10 +51,16 @@
       <div class="col-md-2">
         <h4>SUMMARY</h4>
       </div>
-      <div class="col-md-4">
-        <p>Total Wants<br/><strong style="font-size:large;">88</strong></p>
+      <div class="col-md-2">
+        <p>Users<br/><strong style="font-size:large;color:#ff3399;">308</strong></p>
       </div>
-      <div class="col-md-6" style="text-align:right;">
+      <div class="col-md-2">
+        <p>Avg Klout Score<br/><strong style="font-size:large;color:#ff3399;">48</strong></p>
+      </div>
+      <div class="col-md-2">
+        <p>Price range<br/><strong style="font-size:large;color:#ff3399;">$2000-3000</strong></p>
+      </div>
+      <div class="col-md-4" style="text-align:right;">
           <button class="btn btn-default">
             Offers
           </button>
