--- a/assets/admin/views/home.html
+++ b/assets/admin/views/home.html
@@ -176,7 +176,7 @@
       <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
-          <activity icon="chris" first="Chris" last="Nesladek" name="Chris Nesladek" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Sue Smith">
+          <activity icon="chris" first="Chris" last="Nesladek" name="Chris Nesladek" since="2012" replies="0" plusk="0" posted="Apr 18, 2014" topreply="Sue Smith" klout="55">
             <div class="post">
               Posted a video<br/>
               <img src="images/video_placeholder.png" />
@@ -188,7 +188,7 @@
       <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
-          <activity icon="sue" first="Sue" last="Smith" name="Sue Smity" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams">
+          <activity icon="sue" first="Sue" last="Smith" name="Sue Smity" since="2012" replies="22" plusk="3" posted="Apr 18, 2014" topreply="Jason Adams" klout="85">
             <div class="post">
               <p style="color:#8C62AC;font-weight:bold;"><img src="images/shield_purple.png"> ACHIEVEMENT UNLOCKED</p>
               <p style="color:#8C62AC;">Sue has just answered 5 questions in a row!</p>
