--- a/assets/admin/views/demand.html
+++ b/assets/admin/views/demand.html
@@ -6,8 +6,8 @@
     <div class="row interior-section" style="padding-bottom:10px;">
       <div class="col-md-12">
         <div class="btn-group">
-          <button type="button" class="btn btn-default {{range==90?'active':''}}" ng-click="set_range(90)">90 day</button>
-          <button type="button" class="btn btn-default {{range==30?'active':''}}" ng-click="set_range(30)">30 day</button>
+          <button type="button" class="btn btn-default {{range==90?'active':''}}" ng-click="set_range(90)">90 days</button>
+          <button type="button" class="btn btn-default {{range==30?'active':''}}" ng-click="set_range(30)">30 days</button>
           <button type="button" class="btn btn-default {{range==7?'active':''}}" ng-click="set_range(7)">7 days</button>
         </div>
 
@@ -47,18 +47,18 @@
 -->
     </div>
 
-    <div class="row" style="padding-top:10px;">
+    <div class="row" style="padding-top:10px;background:white;border-bottom: 1px solid #ccc;">
       <div class="col-md-2">
         <h4>SUMMARY</h4>
       </div>
       <div class="col-md-2">
-        <p>Users<br/><strong style="font-size:large;color:#ff3399;">308</strong></p>
+        <p>Users<br/><strong style="font-size:24px;color:#ff3399;">108</strong></p>
       </div>
       <div class="col-md-2">
-        <p>Avg Klout Score<br/><strong style="font-size:large;color:#ff3399;">48</strong></p>
+        <p>Avg Klout Score<br/><strong style="font-size:24px;color:#ff3399;">48</strong></p>
       </div>
       <div class="col-md-2">
-        <p>Price range<br/><strong style="font-size:large;color:#ff3399;">$2000-3000</strong></p>
+        <p>Price range<br/><strong style="font-size:24px;color:#ff3399;">$2700-3000</strong></p>
       </div>
       <div class="col-md-4" style="text-align:right;">
           <button class="btn btn-default">
@@ -120,7 +120,7 @@
       <div class="col-md-2" style="text-align:left;">
         <button class="btn btn-default btn-xs">
           <img src="images/klout.png">
-          Send Perk
+          View Profile
         </button>
       </div>
     </div>
