More admin updates

--- a/assets/admin/views/demand.html
+++ b/assets/admin/views/demand.html
@@ -52,13 +52,13 @@
         <h4>SUMMARY</h4>
       </div>
       <div class="col-md-2">
-        <p>Users<br/><strong style="font-size:24px;color:#ff3399;">108</strong></p>
+        <p>Users<br/><strong style="font-size:24px;color:#ff3399;">{{summary.users}}</strong></p>
       </div>
       <div class="col-md-2">
-        <p>Avg Klout Score<br/><strong style="font-size:24px;color:#ff3399;">48</strong></p>
+        <p>Avg Klout Score<br/><strong style="font-size:24px;color:#ff3399;">{{summary.klout}}</strong></p>
       </div>
       <div class="col-md-2">
-        <p>Price range<br/><strong style="font-size:24px;color:#ff3399;">$2700-3000</strong></p>
+        <p>Price range<br/><strong style="font-size:24px;color:#ff3399;">{{summary.range}}</strong></p>
       </div>
       <div class="col-md-4" style="text-align:right;">
           <button class="btn btn-default">
@@ -119,7 +119,6 @@
       </div>
       <div class="col-md-2" style="text-align:left;">
         <button class="btn btn-default btn-xs">
-          <img src="images/klout.png">
           View Profile
         </button>
       </div>
