--- a/assets/admin/views/demand.html
+++ b/assets/admin/views/demand.html
@@ -61,11 +61,11 @@
         <p>Price range<br/><strong style="font-size:24px;color:#ff3399;">{{summary.range}}</strong></p>
       </div>
       <div class="col-md-4" style="text-align:right;">
-          <button class="btn btn-default">
+          <button class="btn btn-default btn-lg">
             Offers
           </button>
 
-          <button class="btn btn-default" ng-click="sendBulkPerk()">
+          <button class="btn btn-default btn-lg" ng-click="sendBulkPerk()">
             <img src="images/klout.png">
             Bulk Perks
           </button>
