Changing some activity stuff

--- a/assets/admin/views/home.html
+++ b/assets/admin/views/home.html
@@ -160,7 +160,7 @@
   </div>
 
   <div class="col-md-4">
-    <h3 class="region-title">Questions</h3>
+    <h3 class="region-title">Recent Activity</h3>
 
     <div class="well">
       <div class="row interior-section" style="padding-bottom:10px;">
@@ -176,10 +176,10 @@
       <div class="row interior-section" style="padding-top:10px;background-color:white;">
         <div class="col-md-12">
 
-          <activity icon="chris" first="Chris" last="Nesladek" name="Chris Nesladek" since="2012" replies="0" plusk="0" posted="Apr 18, 2014" topreply="Sue Smith" klout="55">
+          <activity icon="chris" first="Chris" last="Nesladek" name="Chris Nesladek" since="2012" replies="288" plusk="10.4K" posted="Apr 18, 2014" topreply="Sue Smith" klout="55">
             <div class="post">
               Posted a video<br/>
-              <img src="images/video_placeholder.png" />
+              <img src="images/video_placeholder.png" style="max-width:90%;" />
             </div>
           </activity>
 
